--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -2,6 +2,9 @@
 .top-bar {
   display: none;
 }
+#cart-count {
+  color: #fff
+}
 .product-card__buy button {
   background: #d69538
 }
@@ -9,7 +12,7 @@
   color: #70655e !important;
 }
 #header {
-  background: #ffede6;
+  background: #fff;
 }
 .header__search {
   i {
@@ -17,8 +20,8 @@
   }
 
   input {
-     background: #ffede6;
-     border-bottom: .01px solid #70655e;
+     background: #fff;
+     border: .01px solid #000;
      border-radius: 0;
   }
 }
